[tool.poetry]
name = "pubmed_query_tool"
version = "0.1.0"
description = "Fetch PubMed papers with industry affiliations."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.81"
python-dotenv = "^0.19.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_query_tool.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
